--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "validator": "^6.2.1"
   },
   "dependencies": {
     "moment": "^2.17.1",
