hooks support data override

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "mocha": "mocha",
-    "test": "mocha --recursive --reporter dot ./tests || exit 0"
+    "test": "mocha --recursive --reporter dot ./tests || exit 0",
+    "debug": "iron-node node_modules/mocha/bin/_mocha"
   },
   "keywords": [
     "js",
